--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "next start",
     "lint": "next lint",
     "electron": "electron .",
-    "dev:all": "concurrently \"npm run dev\" \"npm run electron\""
+    "dev:all": "concurrently \"npm run dev -- -p 4000\" \"npm run electron\"",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
@@ -30,7 +32,23 @@
     "@types/react": "19.1.8",
     "concurrently": "^9.2.0",
     "electron": "^37.2.0",
+    "electron-builder": "^26.0.12",
+    "electron-next": "^3.1.5",
     "tailwindcss": "^4",
     "typescript": "5.8.3"
+  },
+  "build": {
+    "appId": "com.teqheal.tracker",
+    "productName": "TeqHeal Tracker",
+    "files": [
+      "out/**/*",
+      "electron/**/*"
+    ],
+    "directories": {
+      "output": "build"
+    },
+    "win": {
+      "target": "nsis"
+    }
   }
 }
