--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "teqheal-admin-panel-next",
+  "name": "TeqhealSolution",
   "version": "0.1.0",
   "private": true,
   "main": "electron/main.js",
@@ -48,7 +48,8 @@
       "output": "build"
     },
     "win": {
-      "target": "nsis"
+      "target": "nsis",
+      "icon": "app/favicon.ico"
     }
   }
 }
