Refactor tracker daily update and remove Electron code
Replaces the daily update page with a modal component (ModelDailyUpdate) integrated into the tracker UI. Refactors attendance and screenshot scheduling logic for better modularity. Removes all Electron-related files and dependencies, cleaning up unused endpoints and page routes. Updates login and tracker components to use new user data flow and external signup link.

--- a/package.json
+++ b/package.json
@@ -2,16 +2,11 @@
   "name": "TeqhealSolution",
   "version": "0.1.0",
   "private": true,
-  "main": "electron/main.js",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "electron": "electron .",
-    "dev:all": "concurrently \"npm run dev -- -p 4000\" \"npm run electron\"",
-    "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "lint": "next lint"
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
@@ -21,7 +16,6 @@
     "firebase": "^11.10.0",
     "framer-motion": "^12.19.2",
     "next": "15.3.5",
-    "node-global-key-listener": "^0.3.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -30,35 +24,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/react": "19.1.8",
-    "concurrently": "^9.2.0",
-    "electron": "^37.2.0",
-    "electron-builder": "^26.0.12",
-    "electron-next": "^3.1.5",
     "tailwindcss": "^4",
     "typescript": "5.8.3"
-  },
-  "build": {
-    "asar": true,
-    "appId": "com.teqheal.tracker",
-    "productName": "TeqHeal Tracker",
-    "files": [
-      "out/**/*",
-      "electron/**/*"
-    ],
-    "directories": {
-      "output": "build"
-    },
-    "win": {
-      "target": "nsis",
-      "icon": "app/teqheal.ico"
-    },
-    "nsis": {
-      "oneClick": true,
-      "perMachine": false,
-      "allowElevation": true,
-      "createDesktopShortcut": true,
-      "createStartMenuShortcut": true,
-      "shortcutName": "Teqheal Tracker"
-    }
   }
 }
