Refactor appKey to appKeys and enhance CRUD pages
Replaces all imports and usage of 'appKey' with 'appKeys' for consistency across the codebase. Majorly refactors and implements full CRUD table UIs for basic salary, client, project, and employee pages, including search, add, edit, delete, and status toggle features. Adds new model files and utility functions, updates table columns, and improves modal handling and data updates. Also includes new priority images and utility scripts, and renames 'appKey.js' to 'appKeys.js'.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/nextjs-registry": "^1.0.2",
     "antd": "^5.26.2",
     "axios": "^1.10.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.19.2",
