--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-image-gallery": "^1.4.0"
+    "react-image-gallery": "^1.4.0",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
