--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.19.2",
+    "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-image-gallery": "^1.4.0",
-    "react-masonry-css": "^1.0.16"
+    "react-masonry-css": "^1.0.16",
+    "react-quill-new": "^3.4.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
