--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "emoji-picker-react": "^4.13.2",
     "firebase": "^11.10.0",
     "framer-motion": "^12.19.2",
+    "idb": "^8.0.3",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "peerjs": "^1.5.5",
