--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "idb": "^8.0.3",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
+    "next-pwa": "^5.6.0",
     "peerjs": "^1.5.5",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
