--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase": "^11.10.0",
     "framer-motion": "^12.19.2",
     "idb": "^8.0.3",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-pwa": "^5.6.0",
